--- a/template/src/chatComponents/components/chatRoom/ChatRoom/ChatRoom.css
+++ b/template/src/chatComponents/components/chatRoom/ChatRoom/ChatRoom.css
@@ -271,6 +271,10 @@ button {
   height: 60px;
   box-shadow: 0 0 2px 0 rgb(0 0 0 / 7%), 0 11px 9px 0 rgb(0 0 0 / 20%);
 }
+.buttonDark {
+  background: #2e2e2e !important;
+  border: 2px solid #9f9e9c !important;
+}
 .chat-button > img {
   padding: 8px;
   margin-top: 2px;
