added overflow hidden to input when is minified

--- a/template/src/chatComponents/components/speech-recognition/speechToText.css
+++ b/template/src/chatComponents/components/speech-recognition/speechToText.css
@@ -51,6 +51,7 @@
   width: 138px;
   margin-right: 4px;
   transition: all 0.4s ease-in-out;
+  overflow: hidden;
 }
 .margin-right10 {
   margin-right: 10px;
