--- a/template/src/chatComponents/components/loader/loader.css
+++ b/template/src/chatComponents/components/loader/loader.css
@@ -4,10 +4,7 @@
   position: relative;
   width: 80px;
   height: 80px;
-  position: fixed;
   z-index: 999999;
-  top: 46px;
-  left: 20px;
 }
 .lds-spinner div {
   transform-origin: 40px 40px;
@@ -22,7 +19,7 @@
   width: 6px;
   height: 18px;
   border-radius: 20%;
-  background: #fff;
+  background: rgb(75, 73, 73);
 }
 .lds-spinner div:nth-child(1) {
   transform: rotate(0deg);
@@ -79,4 +76,12 @@
   100% {
     opacity: 0;
   }
+}
+
+.messages-container-spiner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: auto;
 }
