--- a/template/src/chatComponents/components/chatRoom/ChatRoom/ChatRoom.css
+++ b/template/src/chatComponents/components/chatRoom/ChatRoom/ChatRoom.css
@@ -947,12 +947,12 @@ button {
   background: transparent;
   border: none;
   position: absolute;
-  right: 202px;
-  margin-top: 5px;
-  margin-right: -12px;
+  right: 6px;
+  margin-top: 3px;
+  margin-right: -6px;
 }
 .leftBubble {
-  left: 192px;
+  left: -4px;
 }
 .fade-in-right {
   animation: fade-in-right 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
@@ -978,6 +978,48 @@ button {
   }
   100% {
     transform: translateX(0);
+    opacity: 1;
+  }
+}
+.shake-bottom {
+  animation: shake-bottom 0.8s cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
+}
+@keyframes shake-bottom {
+  0%,
+  100% {
+    transform: rotate(0deg);
+    transform-origin: 50% 100%;
+  }
+  10% {
+    transform: rotate(2deg);
+  }
+  20%,
+  40%,
+  60% {
+    transform: rotate(-4deg);
+  }
+  30%,
+  50%,
+  70% {
+    transform: rotate(4deg);
+  }
+  80% {
+    transform: rotate(-2deg);
+  }
+  90% {
+    transform: rotate(2deg);
+  }
+}
+.scale-in-center {
+  animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+@keyframes scale-in-center {
+  0% {
+    transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
     opacity: 1;
   }
 }
